Almost done- main-box,side-bar

--- a/index.html
+++ b/index.html
@@ -36,7 +36,157 @@
     </div>
     </div>
     <div class="sidebar">
-        
+        <ul>
+            <li><a href="">
+                <span class="library">Your Library</span>
+                <span><i class="fa-solid fa-plus"></i></span>
+            </a></li>
+            <li>
+                <div class="sidebar-scroll">
+                    <div class="create-playlist">
+                        <h4>Create your first playlist</h4>
+                        <p>It's easy,we'll help you</p>
+                        <button>Create playlist</button>
+                    </div>
+                    <div class="create-playlist">
+                        <h4>Lets find some podcasts to follow</h4>
+                        <p>We'll keep you updated on new episodes</p>
+                        <button>Browse podcasts</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+    
+    <div class="privacy">
+        <ul>
+            <li>
+                <a href="">Legal</a>
+                <a href="">Safety&PrivacyCenter</a>
+            </li>
+            <li>
+                <a href="">PrivacyPolicy</a>
+                <a href="">Cookies</a>
+                <a href="">AboutAds</a>
+            </li>
+            <li>
+                <a href="">Accessibility</a>
+            </li>
+            <li>
+                <a href="" style="color: white;">Cookies</a>
+            </li>
+        </ul>
     </div>
+
+    <div class="eng-btn">
+        <button>English</button>
+    </div>
+
+    </div>
+
+<!--Main section-->
+
+<div class="main-section">
+    <div class="spotify-playlist">
+        <h2>Trending songs</h2>
+        <div class="card">
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab67616d0000b2732557d7b4bf9ca1c289f40e97" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Pretty Little Baby</h4>
+                <p>Connie Francis</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab67616d0000b2738a30c41e2c9336c293ebebfe" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Gnarly</h4>
+                <p>KATSEYE</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab67616d0000b273797e9be1830b648ba9d52100" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>لا نحاسبك لا نلومك / خاين كبير من يومك</h4>
+                <p>اهملتك FM</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab67616d0000b273110d1a20d2870a37d182c8b0" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>KALEMENY BELEL</h4>
+                <p>Marwan Moussa,Lege-Cy</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab67616d0000b273cf0baa094ea724af4e877b6d" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>LOS VOLTAJE</h4>
+                <p>Sayfalse,Yb Wasg'ood,Ariis</p>
+            </div>
+        </div>
+    </div>
+    <div class="spotify-playlist">
+        <h2>Popular artists</h2>
+        <div class="card">
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab6761610000e5eb4a21b4760d2ecb7b0dcdc8da" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Pretty Little Baby</h4>
+                <p>Connie Francis</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab6761610000e5eb9e528993a2820267b97f6aae" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Pretty Little Baby</h4>
+                <p>Connie Francis</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab6761610000e5ebaadc18cac8d48124357c38e6" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Pretty Little Baby</h4>
+                <p>Connie Francis</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab6761610000e5ebd4ac9edbee6609f8dd75b1bc" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Pretty Little Baby</h4>
+                <p>Connie Francis</p>
+            </div>
+
+            <div class="item">
+                <img src="https://i.scdn.co/image/ab67616d0000b273fd43a22733959b380ba02213" alt="">
+                <div class="play-btn">
+                    <span><i class="fa-solid fa-play"></i></span>
+                </div>
+                <h4>Pretty Little Baby</h4>
+                <p>Connie Francis</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
