forgot to add login button use imao ;) added onclick to button to login.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="divider"></div>
         <a href="#" class="arrow-down"><i class="fa-solid fa-arrow-down"></i><span class="install-text">Install App</span></a>
         <a href="#">Sign up</a>
-        <button class="login-button">Log in</button>
+        <button onclick="location.href='login.html'" class="login-button">Log in</button>
     </div>
     </div>
     <div class="sidebar">
