footer layout. not done yet

--- a/login.html
+++ b/login.html
@@ -43,5 +43,11 @@
   
       <p>Don't have an account? <a href="#">Sign up for Spotify</a></p>
     </div>
+
+    <div class="footer-section">
+      <div class="footer">
+        
+      </div>
+    </div>
   </body>
   </html>
